--- a/src/main/resources/premadeWorkout.fxml
+++ b/src/main/resources/premadeWorkout.fxml
@@ -18,6 +18,9 @@
                  <font>
                      <Font name="Arial" size="13.0" />
                  </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
              </Button>
          </children></AnchorPane>
       <AnchorPane layoutY="171.0" prefHeight="79.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
