--- a/src/main/resources/application.fxml
+++ b/src/main/resources/application.fxml
@@ -83,7 +83,7 @@
                      <DropShadow height="74.38" radius="31.502499999999998" width="53.63" />
                   </effect></ImageView>
             </children></AnchorPane>
-         <TextArea id="TextField" fx:id="mainTextBox" editable="false" layoutY="463.0" mouseTransparent="true" prefHeight="137.0" prefWidth="900.0" styleClass="TextField" text="Hello guy&#10;Tuesday&#10;Scheduled workout: Legs" wrapText="true" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="463.0">
+         <TextArea id="TextField" fx:id="mainTextBox" editable="false" layoutY="463.0" mouseTransparent="true" prefHeight="137.0" prefWidth="900.0" styleClass="TextField" text="Hello guy&#10;Tuesday&#10;Scheduled workout: Legs" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <cursor>
                <Cursor fx:constant="TEXT" />
             </cursor></TextArea>
