--- a/src/main/resources/premadeWorkout.fxml
+++ b/src/main/resources/premadeWorkout.fxml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #202020;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="idata1002_2021_group11.Controller">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #202020;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="idata1002_2021_group11.PremadeWorkoutController">
    <children>
       <AnchorPane layoutY="-1.0" prefHeight="547.0" prefWidth="900.0">
          <children>
-            <Label layoutX="32.0" layoutY="14.0" prefHeight="27.0" prefWidth="234.0" text="Premade workouts" textFill="WHITE" wrapText="true">
+            <Label layoutX="32.0" layoutY="14.0" prefHeight="27.0" prefWidth="234.0" text="Example Exercises" textFill="WHITE" wrapText="true">
                <font>
                   <Font name="Calibri" size="28.0" />
                </font>
             </Label>
-             <Button layoutX="14.0" layoutY="481.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="210.0" styleClass="ButtonGreen" text="Complete selected" AnchorPane.leftAnchor="14.0">
-                 <font>
-                     <Font name="Arial" size="13.0" />
-                 </font>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-             </Button>
          </children></AnchorPane>
       <AnchorPane layoutY="171.0" prefHeight="79.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
@@ -31,6 +28,18 @@
                  </cursor>
              </Button>
          </children></AnchorPane>
-      <TextField alignment="TOP_LEFT" layoutX="271.0" layoutY="59.0" prefHeight="409.0" prefWidth="900.0" styleClass="TextField" text="Premade workouts will show up here" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="59.0" />
+      <HBox layoutX="-1.0" layoutY="67.0" prefHeight="446.0" prefWidth="900.0">
+         <children>
+            <TableView fx:id="tableView" prefHeight="446.0" prefWidth="899.0">
+              <columns>
+                <TableColumn fx:id="exerciseColumn" prefWidth="343.0" text="EXERCISE" />
+                <TableColumn fx:id="descriptionColumn" prefWidth="535.0" text="DESCRIPTION" />
+              </columns>
+            </TableView>
+         </children>
+         <padding>
+            <Insets left="10.0" right="10.0" />
+         </padding>
+      </HBox>
    </children>
 </AnchorPane>
