--- a/src/main/resources/createWorkout.fxml
+++ b/src/main/resources/createWorkout.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
@@ -8,7 +7,7 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #202020;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="idata1002_2021_group11.Controller">
     <children>
-        <Button fx:id="calculatorButton" layoutX="11.0" layoutY="443.0" mnemonicParsing="false" onAction="#returnToMainScene" prefHeight="43.0" prefWidth="786.0" styleClass="Button" text="Home" textFill="WHITE" wrapText="true" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0">
+        <Button fx:id="returnHomeButton" layoutX="11.0" layoutY="443.0" mnemonicParsing="false" onAction="#returnToMainScene" prefHeight="43.0" prefWidth="786.0" styleClass="Button" text="Home" textFill="WHITE" wrapText="true" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0">
             <cursor>
                 <Cursor fx:constant="HAND" />
             </cursor>
@@ -19,25 +18,21 @@
                 <Font name="Calibri Bold" size="28.0" />
             </font>
         </Label>
-        <TextArea editable="false" layoutX="-1.0" layoutY="58.0" prefHeight="344.0" prefWidth="432.0" promptText="Your workouts will appear here." styleClass="TextField" AnchorPane.leftAnchor="15.0">
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets></TextArea>
         <Label layoutX="478.0" layoutY="48.0" prefHeight="43.0" prefWidth="267.0" text="Add new exercise:" textFill="WHITE">
             <font>
                 <Font name="Calibri Bold" size="26.0" />
             </font>
         </Label>
-        <TextField layoutX="476.0" layoutY="118.0" prefHeight="35.0" prefWidth="402.0" promptText="Enter text" styleClass="TextField" />
-        <TextField layoutX="476.0" layoutY="191.0" prefHeight="35.0" prefWidth="402.0" promptText="Enter text" styleClass="TextField" />
-        <TextField layoutX="476.0" layoutY="347.0" prefHeight="35.0" prefWidth="402.0" promptText="Enter text" styleClass="TextField" />
-                <Button layoutX="478.0" layoutY="430.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="402.0" styleClass="ButtonGreen" text="Add exercise">
+        <TextField fx:id="enterWorkoutField" layoutX="476.0" layoutY="118.0" prefHeight="35.0" prefWidth="402.0" promptText="Enter text" styleClass="TextField" />
+        <TextField fx:id="enterSetsField" layoutX="476.0" layoutY="191.0" prefHeight="35.0" prefWidth="402.0" promptText="Enter text" styleClass="TextField" />
+        <TextField fx:id="enterWeightField" layoutX="476.0" layoutY="347.0" prefHeight="35.0" prefWidth="402.0" promptText="Enter text" styleClass="TextField" />
+        <Button fx:id="addExerciseButton" layoutX="478.0" layoutY="430.0" mnemonicParsing="false" onAction="#addWorkoutToList" prefHeight="35.0" prefWidth="402.0" styleClass="ButtonGreen" text="addExercise">
             <font>
                 <Font name="Jokerman" size="13.0" />
             </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
+            <cursor>
+                <Cursor fx:constant="HAND" />
+            </cursor>
         </Button>
 
         <Label layoutX="478.0" layoutY="91.0" prefHeight="27.0" prefWidth="267.0" text="Enter the name of the workout:" textFill="WHITE">
@@ -50,33 +45,44 @@
                 <Font name="Calibri" size="16.0" />
             </font>
         </Label>
-        <Label layoutX="476.0" layoutY="320.0" prefHeight="27.0" prefWidth="176.0" text="Enter weight used:" textFill="WHITE">
+        <Label layoutX="476.0" layoutY="320.0" prefHeight="27.0" prefWidth="176.0" text="Enter your weight:" textFill="WHITE">
             <font>
                 <Font name="Calibri" size="16.0" />
             </font>
         </Label>
 
-        <Button layoutX="15.0" layoutY="430.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="210.0" styleClass="ButtonGreen" text="Complete selected">
+        <Button fx:id="selectWorkOutButton" layoutX="15.0" layoutY="478.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="210.0" styleClass="ButtonGreen" text="Complete selected">
             <font>
                 <Font name="Arial" size="13.0" />
             </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
+            <cursor>
+                <Cursor fx:constant="HAND" />
+            </cursor>
         </Button>
-        <Button layoutX="237.0" layoutY="430.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="210.0" styleClass="ButtonRed" text="Delete selected">
+        <Button fx:id="removeExercise" layoutX="239.0" layoutY="478.0" mnemonicParsing="false" onAction="#removeWorkoutFromList" prefHeight="35.0" prefWidth="210.0" styleClass="ButtonRed" text="Delete selected">
             <font>
                 <Font name="Jokerman" size="13.0" />
             </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
+            <cursor>
+                <Cursor fx:constant="HAND" />
+            </cursor>
         </Button>
-        <TextField layoutX="476.0" layoutY="270.0" prefHeight="35.0" prefWidth="402.0" promptText="Enter text" styleClass="TextField" />
+        <TextField fx:id="enterRepsField" layoutX="476.0" layoutY="270.0" prefHeight="35.0" prefWidth="402.0" promptText="Enter text" styleClass="TextField" />
         <Label layoutX="478.0" layoutY="243.0" prefHeight="27.0" prefWidth="185.0" text="Enter number of reps:" textFill="WHITE">
             <font>
                 <Font name="Calibri" size="16.0" />
             </font>
         </Label>
+        <HBox layoutX="5.0" layoutY="55.0" prefHeight="416.0" prefWidth="468.0">
+            <children>
+                <TableView fx:id="viewWorkout" editable="true" prefHeight="416.0" prefWidth="468.0">
+                    <columns>
+                        <TableColumn fx:id="workoutColum" prefWidth="147.0" sortable="false" text="Workout" />
+                        <TableColumn fx:id="setsColum" prefWidth="79.0" sortable="false" text="Sets" />
+                        <TableColumn fx:id="repsColum" prefWidth="121.0" sortable="false" text="Reps" />
+                        <TableColumn fx:id="weightColum" prefWidth="81.0" sortable="false" text="Weight" />
+                    </columns></TableView>
+            </children>
+        </HBox>
     </children>
 </AnchorPane>
